--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  </head>
- <body class="loggedin">
+  <body class="loggedin" style="background-image:url('../static/images/dashboardvolunteer.jpg');background-size: 1920px 1080px;background-repeat: no-repeat;">
  <nav class="site-header sticky-top py-1">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2" href="{{ url_for('home') }}">
@@ -23,7 +23,7 @@
   
  <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <nav class="col-md-2 d-none d-md-block sidebar" style="background-color:#5d8da6;">
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
