--- a/templates/oregister.html
+++ b/templates/oregister.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 
-<body style="background-color:#ccc;">
+<body style="background-image:url('../static/images/akshudyamimage.jpg');background-size: 1920px 1080px;background-repeat: no-repeat;">
   <nav class="site-header sticky-top py-1">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
       <!-- <a class="py-2" href="{{ url_for('home') }}">
