--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
  </head>
- <body style="background-color:#ccc;">
+ <body style="background-image:url('../static/images/volunteer.jpg');background-size: 1920px 1080px;background-repeat: no-repeat;">
   <nav class="site-header sticky-top py-1">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
       <!-- <a class="py-2" href="{{ url_for('home') }}">
