--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,6 +3,23 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
+<style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: center;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+</style>
 <h1>Profile Page</h1>
 <div>
     <p>Your account details are below:</p>
