--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1 class="h2">Dashboard</h1>
-<p>Welcome back, {{ username }}!</p>
+<p>Welcome back, {{ username.username }}!</p>
 
 <script type="text/javascript">
   var x = document.getElementById("demo");
