--- a/templates/orphanagehome.html
+++ b/templates/orphanagehome.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <h1 class="h2">Dashboard</h1>
-<p>Welcome back, {{ username }}!</p>
+<p>Welcome back, {{ username.username }}!</p>
 
 {% endblock %}
