--- a/templates/pprofile.html
+++ b/templates/pprofile.html
@@ -1,51 +1,93 @@
-{% extends 'layout.html' %}
-
-{% block title %}Profile{% endblock %}
-
-{% block content %}
-<style>
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Profile</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+ <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ </head>
+  <body class="loggedin" style="background-image:url('../static/images/dashboardvolunteer.jpg');background-size: 1920px 1080px;">
+ <nav class="site-header sticky-top py-1">
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="py-2" href="{{ url_for('home') }}">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+        </a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('home') }}"><i class="fas fa-home"></i> Home</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('profile') }}"><i class="fas fa-user-circle"></i> Profile</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('feedback') }}"><i class="fas fa-user-circle"></i>Feedback</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+   </div>
+    </nav>
+  
+ <div class="container-fluid">
+      <div class="row"> 
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <div class="col-12">
+                <style>
+                    table {
+                      font-family: arial, sans-serif;
+                      border-collapse: collapse;
+                      width: 100%;
+                    }
+                    
+                    td, th {
+                      border: 1px solid #dddddd;
+                      text-align: center;
+                      padding: 8px;
+                    }
+                    
+                    tr:nth-child(even) {
+                      background-color: #dddddd;
+                    }
+                </style>
+                <h1>Profile Page</h1>
+                <div>
+                    <p>Your account details are below:</p>
+                    <table>
+                
+                        <tr>
+                            <td>Username:</td>
+                            <td>{{ account['pname'] }}</td>
+                        </tr>
+                
+                        <tr>
+                            <td>Contact:</td>
+                            <td>{{ account['pcontact'] }}</td>
+                        </tr>
+                        <tr>
+                            <td>Location (Latitude):</td>
+                            <td>{{ account['platitude'] }}</td>
+                        </tr>
+                        <tr>
+                            <td>Location (Longitude):</td>
+                            <td>{{ account['plongitude'] }}</td>
+                        </tr>
+                        <tr>
+                            <td>Food Quantity:</td>
+                            <td>{{ account['foodquantity'] }} kg</td>
+                        </tr>
+                    </table>
+                </div>
+  </div>
+   </div>
+  
+   </main>
     
-    td, th {
-      border: 1px solid #dddddd;
-      text-align: center;
-      padding: 8px;
-    }
-    
-    tr:nth-child(even) {
-      background-color: #dddddd;
-    }
-</style>
-<h1>Profile Page</h1>
-<div>
-    <p>Your account details are below:</p>
-    <table>
+      </div>
+    </div>
+  
+ </body>
+</html>
 
-        <tr>
-            <td>Username:</td>
-            <td>{{ account['pname'] }}</td>
-        </tr>
 
-        <tr>
-            <td>Contact:</td>
-            <td>{{ account['pcontact'] }}</td>
-        </tr>
-        <tr>
-            <td>Location (Latitude):</td>
-            <td>{{ account['platitude'] }}</td>
-        </tr>
-        <tr>
-            <td>Location (Longitude):</td>
-            <td>{{ account['plongitude'] }}</td>
-        </tr>
-        <tr>
-            <td>Food Quantity:</td>
-            <td>{{ account['foodquantity'] }} kg</td>
-        </tr>
-    </table>
-</div>
-{% endblock %}
+
+
+
+
+
+
+
