--- a/templates/producer.html
+++ b/templates/producer.html
@@ -5,7 +5,7 @@
 {% block content %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<h1 class="h2">Producer List </h1>
+<h1 class="h2">Provider List </h1>
 
 <style>
     table {
@@ -25,7 +25,7 @@
     }
 </style>
 <div class="container">
-    <h1>Choose Producer</h1>
+    <h1>Choose Provider</h1>
     <table>
         <th>
         <td>Name</td>
