--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,6 +44,10 @@
             <td>Gender:</td>
             <td>{{ account['gender'] }}</td>
         </tr>
+        <tr>
+            <td>Credits:</td>
+            <td>{{ account['credits'] }}</td>
+        </tr>
     </table>
 </div>
 {% endblock %}
