--- a/templates/register.html
+++ b/templates/register.html
@@ -33,7 +33,7 @@
        <div class="cols-sm-10">
         <div class="input-group">
          <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-         <input type="text" class="form-control" name="fullname" id="fullname"  placeholder="Enter your Name"/>
+         <input type="text" class="form-control" name="fullname" id="fullname"  placeholder="Enter your Name" required>
         </div>
        </div>
       </div>
@@ -42,7 +42,7 @@
        <div class="cols-sm-10">
         <div class="input-group">
          <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-         <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+         <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" required>
         </div>
        </div>
       </div>
