--- a/templates/adminreport1.html
+++ b/templates/adminreport1.html
@@ -30,7 +30,7 @@
 
             <div>Producer Count = {{pc}}</div> <br/>
             <div>Orphanage Count = {{oc}}</div>   <br/>
-
+            <div>Total Provider Volunteer Transactioins = {{pv}}</div>   <br/>
             <div style="text-align: left;">Orphanage List</div>
             <br/>
 
