--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,7 @@
   <a class="py-2 d-none d-md-inline-block" href="{{ url_for('home') }}"><i class="fas fa-home"></i> Home</a>
   <a class="py-2 d-none d-md-inline-block" href="{{ url_for('profile') }}"><i class="fas fa-user-circle"></i> Profile</a>
   <a class="py-2 d-none d-md-inline-block" href="{{ url_for('feedback') }}"><i class="fas fa-user-circle"></i>Feedback</a>
+  <a class="py-2 d-none d-md-inline-block" href="{{ url_for('blog') }}"><i class="fas fa-user-circle"></i>Blog</a>
   <a class="py-2 d-none d-md-inline-block" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Logout</a>
    </div>
     </nav>
