--- a/templates/mapreceiver.html
+++ b/templates/mapreceiver.html
@@ -54,6 +54,7 @@
       </nav>
 <div class="container">
     <h1>{{school.name}}</h1>
+    <h3>Contact : {{school.contact}}</h3>
     <div id="map" style="width:100%; height:500px;"></div>
     <div>
       <form class="form-group" action="{{ url_for('show_school',school_code = school.key) }}" method="post">
