--- a/templates/adminreport1.html
+++ b/templates/adminreport1.html
@@ -58,6 +58,6 @@
     </div>
     <br/>
     <br/>
-    <a href="http://127.0.0.1:5000/adminreportpdf">Generate Report</a>
+    <div style="left: 50%;"><button><a href="http://127.0.0.1:5000/adminreportpdf">Generate Report</a></button></div>
     </body>
 </html>
