--- a/templates/reciver.html
+++ b/templates/reciver.html
@@ -23,11 +23,11 @@
               background-color: #dddddd;
             }
 </style>
-<h1 class="h2">Recivers List </h1>
+<h1 class="h2">Receivers List </h1>
 
     
     <div class="container">
-        <h1>Choose Reciver</h1>
+        <h1>Choose Receiver</h1>
         <table>
         <th><td >Name</td><td >Location</td></th>
         {% for school in schools %}
