--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
     <label for="curlocation" class="cols-sm-2 control-label">Location</label>
     <button onclick="getLocation();" id="curlocation">Set Current Location</button>
 
-    <p id="demo"></p>
+    <p id="demo">{{msg}}</p>
 
     <input type="submit" value="submit" class="form-control btn btn-success " name="">
   </form>
