--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,8 @@
         <input type="text" class="form-control" name="username" placeholder="Username" id="username" required>
         <label>Password</label>
         <input type="password" class="form-control" name="password" placeholder="Password" id="password" required>
-        <input type="checkbox" value="checked"><b>Remember</b>
+        <!-- <input type="checkbox" value="checked"><b>Remember</b> -->
+        <br/>
         <input type="submit" value="Login" class="form-control btn btn-success " name="">
       </form>
       <div id="msg">{{ msg }}</div>
