--- a/templates/informer.html
+++ b/templates/informer.html
@@ -50,7 +50,7 @@
       <label for="Receivername" class="cols-sm-2 control-label">Receiver Name</label>
     </td>
       <td>
-      <input type="text" class="form-control" name="Receivername" placeholder="Reciver name" id="Receivername">
+      <input type="text" class="form-control" name="Receivername" placeholder="Reciver name" id="Receivername" required>
     </td>
   </tr>
 
