--- a/templates/oregister.html
+++ b/templates/oregister.html
@@ -65,7 +65,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
                 <input type="text" class="form-control" name="ocontact" id="ocontact"
-                  placeholder="Enter your Contact number" />
+                  placeholder="Enter your Contact number" required/>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
                 <input type="password" class="form-control" name="opassword" placeholder="Password" id="opassword"
-                  required placeholder="Enter your Password" />
+                  required placeholder="Enter your Password" required/>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                 <input type="text" class="form-control" name="ollt" id="ollt"
-                  placeholder="Enter your location (Latitude)" />
+                  placeholder="Enter your location (Latitude)" required/>
               </div>
             </div>
           </div>
@@ -107,9 +107,9 @@
             <label for="ollg" class="cols-sm-2 control-label">location longitude</label>
             <div class="cols-sm-10">
               <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true" ></i></span>
                 <input type="text" class="form-control" name="ollg" id="ollg"
-                  placeholder="Enter your location (Longitude)" />
+                  placeholder="Enter your location (Longitude)" required/>
               </div>
             </div>
           </div>
