--- a/templates/register.html
+++ b/templates/register.html
@@ -72,8 +72,8 @@
         <div class="cols-sm-10">
          <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-          <input type="radio" name="gender" id="gender" value="Male"> Male
-          <input type="radio" name="gender" id="gender" value="Female"> Female
+          <input type="radio" name="gender" id="gender" value="Male" required> Male
+          <input type="radio" name="gender" id="gender" value="Female" required> Female
          </div>
         </div>
        </div>
