--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -58,7 +58,30 @@
   <div class="container-fluid">
     <div class="row">
       {% if usertype == 'producer' %}
-      
+      <nav class="col-md-2 d-none d-md-block " style="background-color:#ffffff;height: 1080px;">
+        <div class="sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="{{ url_for('home') }}">
+                <i class="fas fa-home"></i>
+                Dashboard <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('recivers') }}">
+                <i class="fas fa-child"></i>
+                Receivers
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('orphanage') }}">
+                <i class="fas fa-users"></i>
+                Orphanages
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       {% else %}{% if usertype != 'producer' %}
       <nav class="col-md-2 d-none d-md-block " style="background-color:#ffffff;height: 1080px;">
         <div class="sidebar-sticky">
@@ -122,7 +145,7 @@
                     </form> -->
               <form class="form-group" action="{{ url_for('feedback') }}" method="post">
                 <label for="feedback" class="cols-sm-2 control-label">Feedback</label>
-                <input type="text" class="form-control" name="feedback" placeholder="Feedback" id="feedback">
+                <input type="text" class="form-control" name="feedback" placeholder="Feedback" id="feedback" required>
 
                 <input type="submit" value="submit" class="form-control btn btn-success " name="">
               </form>
