--- a/templates/map.html
+++ b/templates/map.html
@@ -79,6 +79,7 @@
         <tr><td>
         <input type="submit" value="submit" class="form-control btn btn-success " name="">
       </td>
+      <td>{{msg}}</td>
       </tr>
       </table>
       </form>
