--- a/templates/pregister.html
+++ b/templates/pregister.html
@@ -61,7 +61,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
                 <input type="text" class="form-control" name="pcontact" id="pcontact"
-                  placeholder="Enter your Contact number" />
+                  placeholder="Enter your Contact number" required/>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                 <input type="text" class="form-control" name="pllt" id="pllt"
-                  placeholder="Enter your location (Latitude)" />
+                  placeholder="Enter your location (Latitude)" required/>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                 <input type="text" class="form-control" name="pllg" id="pllg"
-                  placeholder="Enter your location (Longitude)" />
+                  placeholder="Enter your location (Longitude)" required/>
               </div>
             </div>
           </div>
